Fixing Nits & Nats

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -4,11 +4,9 @@ import Photo from "../assets/Photo.png";
 ---
 
 <section id="about" class="py-16 md:py-20 px-6">
-  <h2
-    class="text-5xl font-light text-gray-300 text-center flex flex-col gap-2 pb-12"
-  >
+  <h2 class="text-5xl font-light text-center flex flex-col gap-2 pb-12">
     <span class="text-primary font-bold"
-      >About <span class="text-white font-light">Me</span></span
+      >About <span class="text-gray-300 font-light">Me</span></span
     >
   </h2>
   <div
@@ -27,21 +25,117 @@ import Photo from "../assets/Photo.png";
         alt="Photo of Manikandan"
       />
     </div>
-    <div class="flex flex-col gap-4 justify-center">
-      <p class="text-textMuted">
-        Frontend Engineer for over 6 years focussed on building better user
-        experience on the web. Based in India.
+    <div
+      class="flex flex-col justify-center text-slate-400 max-w-[40ch] mx-auto leading-6"
+    >
+      <p>
+        Hello, I'm <span>Manikandan Sivasankar</span>, a passionate <span
+          >Senior Frontend Developer</span
+        > based in India with a knack for turning design concepts into <span
+          >responsive</span
+        >
+         and functional web applications. Adept at HTML, CSS, JavaScript, React,
+        Next JS complimented by strong technical foundations. I thrive on
+        creating seamless user experiences. Committed to learn and embrace <span
+          >new web development trends</span
+        > all the while enjoying the process.
       </p>
-      <p class="text-textMuted">
-        I love working in an impactful product which would make lives easier.
-      </p>
-      <p class="text-textMuted">
-        Frontend Engineer for over 6 years focussed on building better user
-        experience on the web. Based in India.
-      </p>
-      <p class="text-textMuted">
-        I love working in an impactful product which would make lives easier.
-      </p>
+      <div class="flex flex-col gap-2 pt-8">
+        <a
+          href="tel:+91-9941336115"
+          class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-phone"
+            ><path
+              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+            ></path></svg
+          >
+          <span>+91-9941336115</span>
+        </a>
+        <a
+          href="mailto:manikndnpradeep@gmail.com"
+          class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-mail"
+            ><rect width="20" height="16" x="2" y="4" rx="2"></rect><path
+              d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg
+          >
+          <span>manikndnpradeep@gmail.com</span>
+        </a>
+        <a
+          href="https://github.com/mnkndn"
+          class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-github"
+            ><path
+              d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
+            ></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg
+          >
+          <span>github.com/mnkndn</span>
+        </a>
+        <a
+          href="https://codepen.io/manikndnpradeep"
+          class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-codepen"
+            ><polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"
+            ></polygon><line x1="12" x2="12" y1="22" y2="15.5"></line><polyline
+              points="22 8.5 12 15.5 2 8.5"></polyline><polyline
+              points="2 15.5 12 8.5 22 15.5"></polyline><line
+              x1="12"
+              x2="12"
+              y1="2"
+              y2="8.5"></line></svg
+          >
+          <span>codepen.io/manikndnpradeep</span>
+        </a>
+      </div>
     </div>
   </div>
 </section>
+
+<style>
+  div p span {
+    color: white;
+  }
+</style>
