--- a/src/components/gutter.astro
+++ b/src/components/gutter.astro
@@ -5,20 +5,27 @@
 <div class="gutter"></div>
 
 <style>
-  .gutter {
+  /* .gutter {
     background: linear-gradient(
         90deg,
         transparent,
-        var(--color-fade-1),
-        var(--color-fade-1),
-        var(--color-fade-0),
-        var(--color-fade-0),
-        var(--color-fade-0),
-        var(--color-fade-1),
-        var(--color-fade-1),
+        transparent,
+        transparent,
+        rgba(var(--streak-color), 0.3),
+        rgba(var(--streak-color), 1),
+        rgba(var(--streak-color), 0.3),
+        transparent,
+        transparent,
         transparent
       )
       border-box;
     border: 0.5px solid transparent;
+  } */
+
+  .gutter {
+    height: 1px;
+    width: 100%;
+    /* background-color: #0d172e; */
+    background-color: #1b2741;
   }
 </style>
