--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,7 +4,7 @@
 
 <section
   id="home"
-  class="mx-auto h-[90vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
+  class="mx-auto h-[85vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
 >
   <div
     class="flex flex-col gap-3 justify-start items-center lg:items-start col-span-2 lg:col-span-1 text-center lg:text-start"
@@ -192,7 +192,7 @@
           x2="202.737"
           y2="103.49"
           gradientUnits="userSpaceOnUse"
-          ><stop stop-color="#93C5FD66"></stop><stop
+          ><stop stop-color="#93C5FD88"></stop><stop
             offset="1"
             stop-color="#2D6AE066"
             stop-opacity="0"></stop></linearGradient
@@ -203,7 +203,7 @@
           x2="202.764"
           y2="154.266"
           gradientUnits="userSpaceOnUse"
-          ><stop stop-color="#93C5FD"></stop><stop
+          ><stop stop-color="#b4d5fa"></stop><stop
             offset="1"
             stop-color="#2D6AE0"
             stop-opacity="0"></stop></linearGradient
