--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,29 +12,21 @@
       <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
     </a>
     <nav
-      class="flex gap-8 font-light items-center flex-1 justify-evenly sm:flex-none sm:justify-normal"
+      class="flex gap-8 font-light text-gray-400 items-center flex-1 justify-evenly sm:flex-none sm:justify-normal"
     >
-      <a
-        href="#home"
-        class="text-sm font-medium hover:text-primary transition-colors">HOME</a
+      <a href="#home" class="text-sm hover:text-primary transition-colors"
+        >HOME</a
       >
-      <a
-        href="#about"
-        class="text-sm font-medium hover:text-primary transition-colors"
+      <a href="#about" class="text-sm hover:text-primary transition-colors"
         >ABOUT</a
       >
       <a href="/" class="block sm:hidden gap-2 items-center">
         <img class="h-8" src="/favicon.svg" />
-        <!-- <span class="font-medium text-blue-200 text-lg">MANIKANDAN</span>
-        <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
       </a>
-      <a
-        href="#work"
-        class="text-sm font-medium hover:text-primary transition-colors">WORK</a
+      <a href="#work" class="text-sm hover:text-primary transition-colors"
+        >WORK</a
       >
-      <a
-        href="#skills"
-        class="text-sm font-medium hover:text-primary transition-colors"
+      <a href="#skills" class="text-sm hover:text-primary transition-colors"
         >SKILLS</a
       >
     </nav>
