Fix class bug and updated client directives on devicon component

--- a/src/components/expertise.astro
+++ b/src/components/expertise.astro
@@ -11,64 +11,72 @@ import Card from "./card.jsx";
   <div class="mx-auto max-w-7xl pt-12 flex flex-col">
     <ul class="flex gap-8 md:gap-12 flex-wrap justify-center mask-fade">
       <DevIcon
-        client:load
+        client:visible
         tooltip="HTML"
         iconName="devicon-html5-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="CSS"
         iconName="devicon-css3-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="Tailwind"
         iconName="devicon-tailwindcss-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="Javascript"
         iconName="devicon-javascript-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="React"
         iconName="devicon-react-original colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="Typescript"
         iconName="devicon-typescript-plain colored"
       />
-      <DevIcon client:load tooltip="NextJS" iconName="devicon-nextjs-plain" />
       <DevIcon
-        client:load
+        client:visible
+        tooltip="NextJS"
+        iconName="devicon-nextjs-plain"
+      />
+      <DevIcon
+        client:visible
         tooltip="Webpack"
         iconName="devicon-webpack-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="Jest"
         iconName="devicon-jest-plain colored"
       />
-      <DevIcon client:load tooltip="D3" iconName="devicon-d3js-plain colored" />
       <DevIcon
-        client:load
+        client:visible
+        tooltip="D3"
+        iconName="devicon-d3js-plain colored"
+      />
+      <DevIcon
+        client:visible
         tooltip="NodeJS"
         iconName="devicon-nodejs-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="MongoDB"
         iconName="devicon-mongodb-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="GraphQL"
         iconName="devicon-graphql-plain colored"
       />
       <DevIcon
-        client:load
+        client:visible
         tooltip="PostgresQL"
         iconName="devicon-postgresql-plain colored"
       />
@@ -93,14 +101,13 @@ import Card from "./card.jsx";
           class="bg-primary hover:bg-primary/90 text-[#d7e5ff] px-4 py-2 rounded-md transition-colors flex items-center gap-3"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="lucide lucide-mail"
+            class="h-4 w-4"
             ><rect width="20" height="16" x="2" y="4" rx="2"></rect><path
               d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg
           ><span>Get in touch</span></a
