--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -83,6 +83,8 @@ import Photo from "../assets/Photo.png";
           <span>manikndnpradeep@gmail.com</span>
         </a>
         <a
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://www.linkedin.com/in/manikandansivasankar/"
           class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
         >
@@ -107,6 +109,8 @@ import Photo from "../assets/Photo.png";
           <span>@manikandansivasankar</span>
         </a>
         <a
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://github.com/mnkndn"
           class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
         >
@@ -128,6 +132,8 @@ import Photo from "../assets/Photo.png";
           <span>github.com/mnkndn</span>
         </a>
         <a
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://codepen.io/manikndnpradeep"
           class="flex items-center text-sm gap-2 justify-start md:justify-start hover:text-white transition-colors"
         >
