--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "../components/header.astro";
+import Header from "../components/header.jsx";
 import Hero from "../components/hero.astro";
 import Gutter from "../components/gutter.astro";
 import About from "../components/about.astro";
@@ -41,7 +41,7 @@ const { title } = Astro.props;
     <Tooltips interactive={true} delay={[50, 0]} placement={"top"} />
   </head>
   <body class="min-h-full">
-    <Header />
+    <Header client:load />
     <main>
       <div class="fixed-gradient"></div>
       <div class="moving-dot"></div>
@@ -56,6 +56,7 @@ const { title } = Astro.props;
       <Footer />
     </main>
     <script>
+      // Print to console
       console.log(
         "%c Hey, fellow developer! ",
         "font-size: 20px;color: #2d6ae0; font-weight: bold",
@@ -64,6 +65,8 @@ const { title } = Astro.props;
         "%c Glad to have you around here.",
         "font-size: 20px;color: #2d6ae0; font-weight: bold",
       );
+
+      // Moving dot implementation
       const movingDot = document.querySelector(".moving-dot") as HTMLElement;
       document.body.addEventListener("mousemove", (e) => {
         var x = e.pageX;
@@ -71,6 +74,27 @@ const { title } = Astro.props;
         var newposX = x - 192.5;
         var newposY = y - 265;
         movingDot.style.transform = `translate3d(${newposX}px,${newposY}px,0px)`;
+      });
+
+      // Header highlight implementation
+      import { changeRoute } from "../store/index";
+      const ids = ["home", "about", "work", "skills"];
+
+      const observer = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            entry.isIntersecting && changeRoute(entry.target.id);
+          });
+        },
+        {
+          rootMargin: "0px",
+          threshold: 0.8,
+        },
+      );
+
+      ids.forEach((id) => {
+        const el = document.querySelector(`#${id}`);
+        el && observer.observe(el);
       });
     </script>
 
