--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,6 @@ import Experience from "../components/experience.jsx";
 import Expertise from "../components/expertise.astro";
 import Footer from "../components/footer.astro";
 import { Tooltips } from "astro-tooltips";
-
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -37,7 +31,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Manikandan Sivasankar</title>
     <Tooltips interactive={true} delay={[50, 0]} placement={"top"} />
   </head>
   <body class="min-h-full">
