--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,3 @@
----
-import { BASE_URL } from "../constants/config";
----
-
 <section
   id="home"
   class="mx-auto h-[85vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
@@ -19,7 +15,7 @@ import { BASE_URL } from "../constants/config";
 
     <div class="mt-8 flex gap-4">
       <a
-        href={`${BASE_URL}/resume.pdf`}
+        href="/resume.pdf"
         target="_blank"
         rel="noopener noreferrer"
         class="bg-primary flex items-center gap-2 hover:bg-primary/90 text-[#d7e5ff] px-4 py-2 rounded-md self-center lg:self-start transition-colors"
